# 1brc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  format.bat  run.sh
src/: CMakeLists.txt  calculate_average.cpp  create_measurements.cpp  file_view.cpp  file_view.h  hash_map.cpp  hash_map.h
